[project]
name = "comfyui_mittimi_width_height"
description = "This node can easily switch between vertical and horizontal values with a single button."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/mittimi/ComfyUI_mittimiWidthHeight"

[tool.comfy]
PublisherId = "mittimi"
DisplayName = "ComfyUI_mittimiWidthHeight"
Icon = ""
